2017-03-28  Björn Freise  <mcfreis@gmx.net>

	Minor fixes and "hopefully" compatible to Ubuntu 16.04

	* dtls/__init__.py: Removed wrapper import
	* dtls/openssl.py: Fixed line endings to LF
	* dtls/patch.py: Removed PROTOCOL_SSLv3 import and fixed line endings to LF
	* dtls/sslconnection.py: Fixed line endings to LF
	* dtls/test/certs/*_ec.pem: Fixed line endings to LF
	* dtls/test/echo_seq.py: Fixed line endings to LF
	* dtls/test/simple_client.py: Fixed line endings to LF
	* dtls/test/unit.py: Fixed line endings to LF
	* dtls/test/unit_wrapper.py: Corrected wrapper import and fixed line endings to LF
	* dtls/util.py: Fixed line endings to LF
	* dtls/wrapper.py: Corrected function naming to wrap_client() and wrap_server(); Fixed line endings to LF
	* dtls/x509.py: Fixed line endings to LF

2017-03-23  Björn Freise  <mcfreis@gmx.net>

	Patched ssl-Module with SSL_BUILD_*- and ERR_*- constants and added aliases for wrap_server() and wrap_client()

	* dtls/__init__.py: Added DtlsSocket() from wrapper and aliases for wrap_server() and wrap_client()
	* dtls/err.py: Added patch_ssl_errors() to patch ssl-Module with ERR_* constants
	* dtls/patch.py: Patched ssl-Module with SSL_BUILD_* constants and added call to patch_ssl_errors()
	* dtls/wrapper.py:
	    - Added a server and client function to alias/wrap DtlsSocket() creation
	    - Cleanup of DtlsSocket.__init__()
	    - Cleanup of exception handling in all member methods
	    - Cleanup sendto() from client: no endless loop and first do a connect if not already connected
	* dtls/test/unit_wrapper.py: Adopt the changes made described above

2017-03-17  Björn Freise  <mcfreis@gmx.net>

	Added a wrapper for a DTLS-Socket either as client or server - including unit tests

	* dtls/__init__.py: Import SSLContext() and SSL() for external use
	* dtls/wrapper.py: Added class DtlsSocket() to be used as client or server
	* dtls/test/unit_wrapper.py: unit test for DtlsSocket()

2017-03-17  Björn Freise  <mcfreis@gmx.net>
