@@ -40,6 +40,7 @@ library's ssl module, since its values can be passed to this module.
   CERT_REQUIRED
 """
 
+import sys
 import errno
 import socket
 import hmac
@@ -560,9 +561,11 @@ class SSLConnection(object):
 
         if self._user_config_ssl:
             self._user_config_ssl(self._intf_ssl)
-        else:
+
+        if sys.platform.startswith('win') and not (SSL_get_options(self._ssl.value) & SSL_OP_NO_QUERY_MTU):
             SSL_set_options(self._ssl.value, SSL_OP_NO_QUERY_MTU)
             DTLS_set_link_mtu(self._ssl.value, 1500)
+
         SSL_set_bio(self._ssl.value, self._rbio.value, self._wbio.value)
         self._rbio.disown()
         self._wbio.disown()
